--- a/docker-compose-arm-pro.yml
+++ b/docker-compose-arm-pro.yml
@@ -7,7 +7,7 @@ services:
     container_name: typedb
     volumes:
       - geminos:/data/typedb:rw
-      - "/User/yashuaovando/Desktop/causeway/volumes/typedb:/typedb:rw"
+      - "~/causeway/typedb:/typedb:rw"
     ports:
       - "1729:1729"
     restart: always
